Fix box shadow not showing up in the bottom of featured images

--- a/global.css
+++ b/global.css
@@ -67,6 +67,7 @@ body {
     -webkit-box-shadow: 0px 30px 64px 0px rgba(0, 0, 0, 0.1);
     box-shadow: 0px 30px 64px 0px rgba(0, 0, 0, 0.1);
     z-index: 1;
+    position: relative;
 }
 
 .project-details {
